# FasterAPI

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  test.py
docs/: main.md
faster_api/: __init__.py  config.py  faster_api.py  router.py
tests/: __init__.py  test_app.py
